--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,9 @@ lxml==4.5.0
 pandas==1.0.1
 regex==2020.6.8
 requests==2.22.0
-requests-oauthlib==1.3.0
-tensorboard==2.2.2
 tokenizers==0.7.0
 transformers==2.11.0
 beautifulsoup4==4.8.2
 redis==3.5.3
 rq==1.4.3
-tensorflow-cpu==2.2.0
+tensorflow==2.2.0
